Fixed some erros regarding the spacing on the right side

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 110%;
+    height: 100%;
     z-index: -1; 
 }
 
@@ -321,7 +321,7 @@ body {
 
 #aboutme {
     font-size: 18px;
-    line-height: 2; 
+    line-height: 1.6; 
     color: #DDDDDD;
     text-align: left;
     background-color: rgba(37, 37, 37, 0.9);
@@ -571,14 +571,15 @@ h2 {
 
     /* About Me Text styles */
     #aboutme {
-        font-size: 10px;
+        font-size: 8px;
         padding: 4% 2%;
         max-width: 100%;
     }
-    
+
     .text-content {
         max-width: 50%;
         margin-left: 4%;
+        text-align: center;
     }
 
     /* Projects Section styles */
